--- a/assets/styles/modules/_page-content.scss
+++ b/assets/styles/modules/_page-content.scss
@@ -7,7 +7,7 @@
   }
 
   &__body {
-    margin-left: 70px;
+    margin-left: 60px;
 
     @include media($extra-small) {
       margin-left: 60px;
