--- a/assets/styles/pages/_home.scss
+++ b/assets/styles/pages/_home.scss
@@ -44,7 +44,7 @@
 
   .search-form {
     float: left;
-    margin-left: 50px;
+    margin-left: 52px;
     @include media($extra-small) {
       margin-left: 44px;
     }
